# prompted-plate

./: .gitignore  README.md  api_call.py  docker-compose.yml  pyproject.toml
backend/: Dockerfile  README.md  api_call.py  pyproject.toml
backend/app/: dummy_data.py  main.py
backend/app/config/: settings.py
backend/app/models/: food.py
backend/app/routes/: food.py
backend/app/services/: chart_data_service.py  food_analysis_service.py
backend/app/utils/: validators.py
backend/tests/: test_food_analysis.py
frontend/: Dockerfile  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.js  App.vue
frontend/src/components/: Card.js  DataChart.vue  ImageUpload.css  ImageUpload.js
