[tool.poetry]
name = "prompted-plate"
version = "0.1.0"
description = ""
authors = ["Philipp Fluegger"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.79.0"
google-generativeai = "^0.6.0"
Pillow = "^10.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
